app/assets/stylesheets/custom.css.scss
/* mixins, variables, etc */
$primary-color: #1575E7;
$secondary-color: #03CB69;
$accent-color: #F16404;
$secondary-accent-color: #B904DC;
$focus-highlight: #225577;
$light-grey: #EEE;
$medium-grey: #AAA;
$dark-grey: #555;

$nav-height: 3.750em;

@mixin border-radius($radius) {
	-webkit-border-radius: $radius;
	-moz-border-radius: $radius;
	-ms-border-radius: $radius;
	border-radius: $radius;
}

/* typography */

@import url("//fonts.googleapis.com/css?family=Lato:400,700");
@import url("//fonts.googleapis.com/css?family=Quicksand:300,400");

@font-face {
  font-family: 'Sofia Pro Light';
  src: font-url('SofiaProLight-webfont.eot');
  src: font-url('SofiaProLight-webfont.woff2') format("woff2"), 	
  font-url('SofiaProLight-webfont.woff') format("woff"), 
  font-url('SofiaProLight-webfont.ttf') format("truetype"); 
}

$px-16: 0.85em;
$px-18: 1.1em;
$px-20: 1.25em;
$px-22: 1.375em;
$px-24: 1.5em;
$px-30: 1.88em;

$body-font-family: Lato, Arial, sans-serif;
$header-font-family: 'Sofia Pro Light', Quicksand, sans-serif;

body {
	font-family: $body-font-family; 
}

h1, h2, h3, h4 {
	font-family: $header-font-family;
	font-weight: normal;
}

h1 {
	font-size: $px-30;
}

h2 {
	font-size: $px-20;
}

h1#hero-blurb {
	font-family: $body-font-family;
	font-size: $px-24;
	font-weight: normal;
	line-height: 1.6em;
}

a {
  text-decoration: none;
  color: inherit;  // for telephone numbers in iOS
}

em {
	font-style: normal;
	color: $secondary-accent-color;
}

nav li a {
 font-size: $px-16;
}

header nav li a {
	color: $dark-grey;
}

footer nav li a {
	color: $primary-color;
}

fieldset legend {
	font-family: $header-font-family;
	font-size: $px-20;
	color: $medium-grey;
}

form label {
	font-size: $px-16;
}
.form-label {
	font-size: $px-16;
}

p#hero-phone {
	font-family: $header-font-family;
	font-size: $px-30;
	color: $dark-grey;
}


/* global */
$base-line-height: 1.33em;
$global-padding: $base-line-height/2;

html, body, div, form, header, footer, nav, section, aside, p {
	position: relative;
  margin: 0;
  padding: 0;
  width: 100%;
  box-sizing: border-box;
}

body {
	text-align: center;
	background-color: #FFF;
}

.center-wrap {
	width: 90%;
	margin: 0 auto;
}

.clear-nav {
	padding-top: $nav-height;
}

.hidden {
	visibility: hidden;
}

section {
	display: block;
	float: left;
	border-bottom: 1.5px solid $dark-grey;
}

.row {
	width: 100%;
	position: relative;
	display: block;
	float: left;
}

.col-1-2, .col-2-2, .col-1-3, .col-2-3, .col-1-8 {
	float: left;
	display: inline-block;
	padding: 0 $global-padding;
}

.accent-border {
	width: 100%;
	display: block;
	border-bottom: 3px dotted $accent-color;
	margin-bottom: $base-line-height;
}

.button-style {
  width: fit-content;
  min-width: 135px;
  margin: 0 auto;
  background-color: $primary-color;
  color: #FFF;
  font-size: $px-20;
  padding: 15px 25px;
  
  @include border-radius(27px);
}

nav {
	ul {
		list-style: none;
  	margin: 10px 0;
 		padding: 0;
  	height: fit-content; 
	}
	
	ul li {
  	display: inline-block;
  } 
}

.table {
	display: table;
}
.tr {
	display: table-row;
}
.td {
	display: table-cell;
}

// Prevent formatting of phone numbers
p:link {
	text-decoration: none;
	color: $dark-grey;
	padding:0; margin:0;
}

/* header */
header {
	nav {
  	height: $nav-height;
  	position: fixed;
  	top: 0;
  	left: 0;
  	z-index: 10;
  	background-color: #FFF;
  	text-align: left; 

		img {
  		width: 150px;
  		display: inline-block;
  		margin-top: 12px;
		}

		ul {
  		position: absolute;
  		top: 0;
  		bottom: 0;
  		right: 0;
		}
	}
}

#menu-icon {
  width: 2.5em;
  height: 2em;
  position: absolute;
  top: 0; right: 0;
  margin-top: $global-padding;
  
  .bar {
  	height: 0.45em;
  	margin-bottom: 0.25em;
  	background: $primary-color;
		@include border-radius(0.2em); 
  } 
}

/* home */
#home {
	#hero-logo {
		//width: 37.5em;
		width: 40em;
		position: relative;
		top: -($nav-height - $global-padding);
		left: -2em;
	}
	#hero-row {
		overflow: visible;
		height: 12.5em;
	}
	.tr {
		margin-bottom: (2*$base-line-height);
	}
	.td:first-child {
		width: 33%;
		vertical-align: middle;
	}
	.td:nth-child(2) {
		width: 66%;
	}	
}

.pitch {
	width: 80%;
	max-width: 50.0em;
	margin: 0 auto;
	padding: ($global-padding * 3) 0;
	position: relative;
	clear: left;
	border-top: 2px dotted $accent-color;
	
	img {
		max-width: 10.25em;
		max-height: 7.938em;	
	}
	.blurb {
		position: relative;
		margin: $global-padding auto ($global-padding * 2);
		word-wrap: break-word;
		p, img {
			display: inline-block;
			margin: 0; padding: 0;
		}
		p {
			width: 80%;
		}
		img {
			width: 8.750em;
			position: absolute;
			right: -(8.750em / 2);
			top: -1em;
		}
	}
	.blurb:nth-of-type(2) {
		text-align: left;
	}
	.row {
		padding: 0;
		margin: 0 auto;
		float: none;
	}
	.col-1-2 {
		width: 50%;
		float: none;
		display: inline-block;
		margin: 0 0 ($global-padding * 2) -3px;
		vertical-align: top;
	}
	ul {
		text-align: left;
		list-style: circle;
		overflow: visible;
		white-space: nowrap;
		margin: 0;
		padding: 0;
		li {
			margin-bottom: $global-padding;
		}
	}
	aside {
		display: inline-block;
		font-size: $px-16;
		position: relative;
		right: -3em;
		
		img { 
			width: 7.3em;
		}
	}
}

.pitch:first-of-type {
	border-top: none;
}


/* footer */
footer {
	float: left;
	min-height: $nav-height;
	padding: $global-padding;
	color: $dark-grey;
	background-color: $medium-grey;
		
	nav ul li {
		margin-left: $base-line-height;
	}
	
	small {
		display: block;
		margin-bottom: $global-padding;
	}
	
	h3 {
		margin: 0;
		padding: 0;
	}
}

.footer-left {
	width: 49%;
	float: left;
	text-align: left;
	margin-bottom: $base-line-height;
}

.footer-right {
	width: 49%;
	float: right;
	text-align: right;
	margin-bottom: $base-line-height;
}


#apply-page {
	background-color: $light-grey;
}

/* forms */
form {
	height: fit-content;
}

input, select {
	width: 100%;
	height: ($base-line-height * 2);
	margin-bottom: $base-line-height;
}

fieldset {
	border: none;
	padding: 0;
}

fieldset legend {
	text-align: left;
	margin: 0 0 $global-padding 0;
	padding: 0;
}

form label {
	display: block;
	text-align: left;
}

.form-label {
	clear: left;
	display: block;
	text-align: left;
	padding: 0 $global-padding;
}

form h3 {
	clear: left;
	margin: $global-padding 0;
	padding: 0 $global-padding;
	font-size: 1em;
	text-align: left;
}

input[type="text"] {
	border: 1px solid $primary-color;
}

input[type="submit"] {
	border: none !important;
	margin: 2em auto 4em;
}

input[type="radio"] {
	width: fit-content;
	display: none;
}

.radio-label {
	display: inline;
}

.radio-row {
	float: left;
	margin-bottom: $global-padding;
}

input[type="radio"] + label:before {
	content: "";
	display: inline-block;
	width: $px-20;
	height: $px-20;
	margin: 0 $global-padding;
	
	background-color: $primary-color;
	@include border-radius(50%);
	box-shadow: inset 0px 2px 3px 0px rgba(0, 0, 0, .3), 0px 1px 0px 0px rgba(255, 255, 255, .8);
}

input[type="radio"]:checked + label:before {
	background-color: $secondary-accent-color;
}

.widget select, .no-widget .select {
	// i.e. when body class is set to .widget, hide the <select> tag
	// and when body class is .no-widget, hide the custom .select div	
	position: absolute;
	left: -5000em;
	height: 0;
	overflow: hidden;
} 


.select {
	position: relative;
	display: inline-block;
	width: fit-content;
	max-width: 80%;
	margin: 0;
	padding: 0.65em 2.8em 0.65em 1.5em;
	font-size: $px-18;
	color: #FFF;
	background-color: $secondary-color;
	/*background-image: linear-gradient(to right,rgba(255,255,255,0),rgba(255,255,255,0) 75%,
																					 $primary-color 75%, $primary-color);*/
																					 
	background-image: linear-gradient(to left, $primary-color, $primary-color 1.5em, rgba(255,255,255,0) 1.5em, rgba(255,255,255,0));		
	//background-size: 30px 100%;																		 
	@include border-radius(17px)
}

.select:after {
	content: "▼";   /*  unicode caracter U+25BC */
	position: absolute;
	z-index: 1;
	font-size: 0.75em;
	margin-top: -(0.75em/2);
	top: 50%;
	right: 0.55em;
}

.select.active, .select:focus {
	outline: none;
	box-shadow: 0 0 3px 1px $focus-highlight;
}

.select .value {
	display: inline-block;
	width: 100%;
	overflow: hidden;
	vertical-align: top;
}

.select .opt-list {
	position: absolute;
	top: 90%;
	left: 10%;
	width: 80%;
	margin:0;
	padding: 0;	
	max-height: 11em;
	overflow-y: auto;
	overflow-x: hidden;
	
	list-style: none;
	z-index: 2;
	color: $light-grey;	
	background: $primary-color;
	border: 2px solid #FFF;
	@include border-radius(4px);
}

.select .option {
	padding: 0.5em 0;
	border-bottom: 2px solid #FFF;
}

.select .highlight {
	background: $secondary-color;
}

.select .opt-list.hidden {
	max-height: 0;
}




/* Media queries */

// Small screens, 695px
@media only screen and (max-width: 43.438em) {  
	.center-wrap {
		width: 98%;
	}
	
	header {
		nav ul, nav:active ul{
			width: 111%;
			//margin: 0 -6%;
			margin: 0;
			padding: 0;
			text-align: center;
			top: $nav-height;
			background: #FFF;
		}
		nav ul li {
			width: 100%;
			display: block;
			padding: $global-padding 0;
			background: #FFF;
			border-bottom: 2px solid $secondary-color;
		}
		nav ul li a {
			font-size: $px-20;
		}
	}
	
	#menu-icon {
		display: inline-block;
		z-index: 11;
	}
	
	form {
		width: 92%;
		max-width: 25em;
		margin: 0 auto;
	}
	
	#home {
		#hero-row {
			height: auto;
		}
		#hero-logo {
			width: 100%;
			top: 0;
			left: -1.5%;
		}
		#hero-phone {
			font-size: $px-24;
			position: absolute;
			top: -($px-30);
			left: $global-padding;
			z-index: 15;
			width: fit-content;
			box-sizing: border-box;
		}
		h1#hero-blurb {
			font-size: 1.2em;
		}
	}
	
	.pitch {
		.row {
			max-width: 400px;
		}
		.blurb img {
			width: 6.85em;
			right: -3em;
		}
	}
}

// Older Phone screens, portrait (extra small)
@media only screen and (max-width: 376px) {
	h1 {
		font-size: $px-24;
	}
}

// Content-specific tweak for #home .tr
@media only screen and (max-width: 40em) {
	.table, .tr {
		display: block;
	}
	.td { display: inline-block; }
	
	#home {
		#hero-button {
			font-size: $px-18;
		}
		.td:first-child, .td:nth-child(2) {
			width: 100%;
		}
		.td:first-child {
			margin: 15px auto 30px;
		}	
	}	
}

// Content-specific tweak for #hero-phone, 695px - 740px
@media only screen and (min-width: 43.438em) and (max-width: 46.25em) {
	#hero-phone {
			font-size: $px-30;
			position: absolute;
			top: -($px-30);
			left: $global-padding;
			z-index: 15;
			width: fit-content;
			box-sizing: border-box;
		}
}

// Medium and Large screens, 695px+
@media only screen and (min-width: 43.438em) {
	.col-1-2 {
		width: 50%;
	}

	.col-2-2 {
		width: 100%;
	}

	.col-1-3 {
		width: 33%;
	}

	.col-2-3 {
		width: 66%;
	}

	.col-1-8 {
		width: 12.5%;
	}
	
	header {
		nav ul {
			display: inline-block;
		}
		nav ul li {
			margin-left: 50px;
		}
		
		#menu-icon {
			display: none;
		}
	}
	
	.pitch {
		.icon {
			position: absolute;
			width: fit-content;
			left: -6.0em;
		}
		img {
			max-width: 11.25em;
			max-height: 8.938em;
		}
		h2 {
			font-size: $px-24;
			width: 70%;
			margin: 0 auto;
		}
		.blurb {
			width: 70%;
		}
		.row {
			width: 80%;
			margin: 0 auto;
			float: none;
		}
		.col-1-2 {
			float: none;
			display: inline-block;
			margin: 0 0 ($global-padding * 2) -3px;
			vertical-align: top;
		}		
	}
}

// Medium screens only, 695px - 1024px
@media only screen and (min-width: 43.438em) and (max-width: 64em) {
	
}

// Large screens, 1025px+
@media only screen and (min-width: 64.063em) {

}

